--- a/public/web/packages/LearningFun/src/home.html
+++ b/public/web/packages/LearningFun/src/home.html
@@ -2,7 +2,7 @@
   <template>
     <style>
       :host {
-        display: 'block';
+        display: block;
         weight: 100%;
         height: 100%;
       }
@@ -20,7 +20,7 @@
         color: white;
         text-align: center;
         margin: 10px;
-        cursor: pinter;
+        cursor: pointer;
       }
     </style>
 
