--- a/public/playground/web/index.html
+++ b/public/playground/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>canvas</title>
-    <script defer src="playground.dart" type="application/dart"></script>
+    <script defer src="playground.dart.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="playground" style="width: 800px; height: 600px"/>
